--- a/views/perguntar.ejs
+++ b/views/perguntar.ejs
@@ -10,10 +10,10 @@
             <div class="card-body">
                 <form method="post" action="/salvarpergunta">
                     <label>Título</label>
-                    <input type="text" placeholder="Título" class="form-control">
+                    <input type="text" name="titulo" placeholder="Título" class="form-control">
 
                     <label>Descrição</label>
-                    <textarea placeholder="Descreva sua pergunta aqui..." class="form-control"></textarea>
+                    <textarea name="descricao" placeholder="Descreva sua pergunta aqui..." class="form-control"></textarea>
 
                     <br/>
                     <button class="btn btn-primary">Perguntar</button>
