--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,32 @@
 <%- include('./partials/header.ejs')%>
 <body>
     <%- include('./partials/navbar.ejs')%>
-    <h3>Perguntas e respostas</h3>
+    <div class="container">
+
+        <div class="row" style="margin-top: 15px">
+            <div class="col-sm">
+                <h1>Perguntas</h1>
+            </div>
+            <div class="col-sm-2" style="margin-top: 10px">
+                <a href="/perguntar" class="btn btn-primary">Perguntar</a>
+            </div>
+        </div>
+
+        <hr>
+
+        <% perguntas.forEach(pergunta => { %>
+            <br/>
+            <div class="card">
+                <div class="card-body">
+                    <h3><%= pergunta.titulo %></h3>
+                </div>
+
+                <div class="card-footer">
+                    <button class="btn btn-primary">Responder</button>
+                </div>
+            </div>
+        <%}) %>
+
+    </div>
 </body>
 <%- include('./partials/footer.ejs')%>
