--- a/views/pergunta.ejs
+++ b/views/pergunta.ejs
@@ -3,8 +3,8 @@
 <body>
     <%- include('./partials/navbar.ejs')%>
     <div class="container">
-        <h1>pergunta</h1>
-        <%= pergunta.titulo%>
+        <h1><%= pergunta.titulo %></h1>
+        <p><%= pergunta.descricao %></p>
     </div>
 </body>
 
