feat(project): Respondendo perguntas

--- a/views/pergunta.ejs
+++ b/views/pergunta.ejs
@@ -8,11 +8,12 @@
 
         <hr>
 
-        <form>
+        <form method="post" action="/responder">
             <h3>Responda</h3>
 
             <label>Resposta: </label>
             <textarea placeholder="Digite sua resposta" class="form-control" name="corpo"></textarea>
+            <input type="hidden" name="pergunta" value="<%= pergunta.id %>">
             <br/>
             <button type="submit" class="btn btn-primary">Responder</button>
         </form>
