--- a/views/pergunta.ejs
+++ b/views/pergunta.ejs
@@ -17,6 +17,18 @@
             <br/>
             <button type="submit" class="btn btn-primary">Responder</button>
         </form>
+
+        <hr>
+
+        <h3>Respostas</h3>
+        <% respostas.forEach((resposta) => { %>
+            <br/>
+            <div class="card">
+                <div class="card-body">
+                    <p><%= resposta.corpo %></p>
+                </div>
+            </div>
+        <% })%>
     </div>
 </body>
 
